--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@
   border-radius: 32px;
   border: 1px solid #fa902b;
   padding: 14px 28px;
+  background-color: white;
 }
 
 .button-container {
@@ -264,15 +265,19 @@
 .best-food {
   padding: 124px 100px 80px 100px;
   display: flex;
-align-items: center;
-justify-items: center;
-flex-direction: column;
-gap: 40px;
+  align-items: center;
+  justify-items: center;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .best-food-section {
   display: flex;
   gap: 111px;
+}
+
+.best-food-section > div {
+  width: 50%;
 }
 
 .best-food-title {
@@ -310,20 +315,264 @@ gap: 40px;
 
 .about-us {
   color: #000;
-text-align: center;
-font-family: Cabin;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; 
-padding: 14px 28px;
-background: #fbc04e;
-border: none;
-border-radius: 32px;
+  text-align: center;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  padding: 14px 28px;
+  background: #fbc04e;
+  border: none;
+  border-radius: 32px;
 }
 
+/* daily offer */
 
 .daily-offer {
   padding: 80px 100px;
 }
 
+.daily-offer-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.daily-offer-title > p {
+  color: #000;
+  text-align: center;
+  font-family: "Playfair Display";
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+}
+
+.daily-offer-button {
+  border: none;
+  background-color: white;
+}
+
+.daily-offer-div {
+  display: flex;
+  margin-top: 4rem;
+  align-items: center;
+  gap: 32px;
+}
+
+.daily-offer-image-container {
+  background-image: linear-gradient(
+      0deg,
+      #111114 -4.2%,
+      rgba(17, 17, 20, 0) 99.66%
+    ),
+    url("./public/image 24.png");
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  position: relative;
+}
+
+/* .gradiant {
+  background: linear-gradient(0deg, #111114 -4.2%, rgba(17, 17, 20, 0) 99.66%);
+  padding-bottom: 0.1px;
+} */
+
+.daily-offer-image-div {
+  border-radius: 5px;
+  margin: 1.5rem;
+  border: 7px solid transparent;
+  border-image: linear-gradient(180deg, #ffde9f -20%, transparent 100%) 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: auto;
+}
+
+.daily-offer-image-div > div > h2 {
+  color: #ffbf5e;
+  text-align: center;
+  font-family: "Playfair Display";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 60px;
+  letter-spacing: -0.4px;
+  padding: 229px 201px 0px 9px;
+}
+
+.daily-offer-image-div > div > h3 {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 3.5rem;
+  font-style: italic;
+  font-weight: 900;
+  line-height: 3.75rem;
+  padding-left: 9px;
+}
+
+.daily-offer-image-div > div > button {
+  border-radius: 32px;
+  background: #fa902b;
+  color: #000;
+  text-align: center;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  margin-left: 9px;
+  margin-top: 98px;
+  margin-bottom: 9px;
+}
+
+.daily-offer-image-container > svg {
+  position: absolute;
+  bottom: 5%;
+  left: 37%;
+}
+
+/* menu */
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 32px;
+  flex-grow: 1;
+}
+
+.menu-section {
+  display: flex;
+  gap: 24px;
+}
+
+.menu-price {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+  gap: 24px;
+}
+
+.menu-left {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.menu-title {
+  color: #000;
+  font-family: "Playfair Display";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 46px;
+}
+
+.menu-description {
+  color: #6c6c6c;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.menu-price-number {
+  color: #000;
+  font-family: Cabin;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 46px;
+}
+
+.menu-section > img {
+  border-radius: 10px;
+}
+
+.online-reservation {
+  background-image: linear-gradient(
+      0deg,
+      #111114 -4.2%,
+      rgba(17, 17, 20, 0) 99.66%
+    ),
+    url("./public/image 26.png");
+  padding: 84px 100px;
+}
+
+.reservation-title {
+  color: #fff;
+  font-family: "Playfair Display";
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px; /* 120% */
+  padding-bottom: 80px;
+}
+
+.reservation-input-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 32px;
+}
+
+.input-div {
+  border-radius: 4px;
+  border: 1px solid #616161;
+  background: rgba(123, 123, 123, 0.5);
+  padding: 18px 16px;
+  position: relative;
+}
+
+.input-div > input {
+  border: none;
+  background: none;
+  color: #fff;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; 
+}
+
+.input-div >svg {
+  position: absolute;
+  bottom: 30%;
+  right: 5%;
+}
+
+::placeholder {
+  color: white;
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
+
+.submit-button {
+  padding: 20px 48px;
+  color: #000;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; 
+border-radius: 48px;
+background: #FBC04E;
+  margin-top: 48px;
+  border: none;
+}
+
+.submit-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+. {}
