--- a/styles.css
+++ b/styles.css
@@ -523,12 +523,13 @@
   border-radius: 4px;
   border: 1px solid #616161;
   background: rgba(123, 123, 123, 0.5);
-  padding: 18px 16px;
+
   position: relative;
 }
 
 .input-div > input {
   border: none;
+  padding: 18px 16px;
   background: none;
   color: #fff;
   font-family: Cabin;
@@ -574,5 +575,258 @@ background: #FBC04E;
   align-items: center;
 }
 
+.contact-container{
+  padding: 124px 0px 80px 0px;
+  max-width: 1240px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-. {}
+.contact-info {
+  display: flex;
+  padding: 0px 32px;
+  justify-content: space-between;
+  margin-bottom: 64px;
+}
+
+.contact-info-section {
+  display: flex;
+  gap: 24px;
+ 
+}
+
+.contact-svg {
+  border-radius: 12px;
+background: #FCF1E7;
+padding: 4px;
+}
+
+.contact-title {
+  color: #000;
+font-family: "Playfair Display";
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+margin-bottom: 24px;
+}
+
+.cotact-time-number {
+  color: #727272;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 133.333% */
+margin-left: 16px;
+}
+
+.contact-time-two {
+  color: #0B0A0B;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 133.333% */
+}
+.contact-time {
+  color: #0B0A0B;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 133.333% */
+margin-bottom:14px;
+}
+
+.location-div-container {
+  display: flex;
+  gap: 16px;
+}
+
+.location-text {
+  color: #727272;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 32px; /* 177.778% */
+}
+
+.contact-svg >svg {
+  padding: 4px;
+}
+
+.newsletter {
+max-width: 1240px;
+margin-left:auto ;
+margin-right: auto;
+display: flex;
+gap: 57px;
+margin-bottom: 0px;
+margin-bottom: 80px;
+}
+
+.newsletter-title {
+  color: #000;
+font-family: "Playfair Display";
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: 60px; 
+margin-bottom: 32px;
+}
+
+.newsletter-first-div {
+  margin-top: 100px;
+}
+
+.newsletter-description {
+  color: #6C6C6C;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 155.556% */
+margin-bottom: 40px;
+}
+
+.newsletter >div {
+  width: 50%;
+}
+
+.newsletter-input {
+  border-radius: 32px;
+border: 1px solid #6C6C6C;
+background: #FFF;
+padding: 16px 178px 16px 16px;
+
+}
+
+.newsletter-input::placeholder {
+  color: #C6C6C6;
+  text-align: center;
+  font-family: Cabin;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+}
+
+.newsletter-button {
+  border-radius: 32px;
+  color: #000;
+text-align: center;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 111.111% */
+background: #FBC04E;
+border: none;
+padding: 16px 32px;
+}
+
+.newsletter-input-section {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.img-border{
+  border-radius: 8px;
+border: 2.5px solid #FF8A01;
+transform: translate(-20px,0px);
+}
+
+.img-border > img {
+  border-radius: 10px;
+  transform: translate(20px,-20px);
+}
+
+/* footer */
+
+.footer {
+  margin-top:160px ;
+  background: #010101;
+  padding: 64px 0px 48px 0px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1240px;
+  margin: 0 auto ;
+  padding:0px 12px ;
+}
+
+.footer-logo {
+  color: #FFF;
+font-family: Jomhuria;
+font-size: 64px;
+font-style: normal;
+font-weight: 400;
+line-height: 40px; /* 62.5% */
+margin-bottom: 32px;
+}
+
+.footer-left {
+  
+}
+
+.footer-description {
+  color: #FFF;
+font-family: Cabin;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 155.556% */
+margin-bottom: 32px;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  gap: 32px;
+  margin-bottom: 64px;
+}
+
+.footer-bottom  >p{
+  color: var(--grey-5, #F3F3F3);
+font-family: Cabin;
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; 
+}
+
+.get-app {
+  color: #FBC04E;
+font-family: Cabin;
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 150% */
+margin-bottom: 16px;
+}
+
+.svg-holder {
+  border-radius: 5px;
+border: 1px solid #A6A6A6;
+background: var(--Base-Black, #000);
+margin-top: 16px;
+display: flex;
+gap: 8px;
+padding: 7.14px 8px;
+}
+
+.logo-text {
+  font-size: 8px;
+  color: #fff;
+}
+
+.svg-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
