--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,11 @@ a {
   color: #000;
 }
 
+.vector-cotainer {
+  max-width: 1240px;
+  margin: 0px auto;
+}
+
 .cabin-title {
   font-family: "Cabin", sans-serif;
   font-optical-sizing: auto;
@@ -49,6 +54,7 @@ a {
   display: flex;
   align-items: center;
   background: #fdfbf7;
+  
 }
 
 .logo {
@@ -78,8 +84,7 @@ a {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  max-width: 1240px;
-  margin: 0px auto;
+  
 }
 
 .nav-button {
@@ -136,11 +141,12 @@ a {
 
 /* hero section */
 
+.hero-section {
+ background: #fdfbf7; 
+}
+
 .hero {
-  background: #fdfbf7;
-  padding-top: 64px;
-  padding: 64px 100px 80px 100px;
-  max-width: 1240px;
+  padding: 64px 0px 80px 0px;
 }
 .hero > h1 {
   color: #010101;
@@ -229,12 +235,10 @@ a {
   gap: 20px;
   border-right: #969696 1px solid;
   align-items: center;
-  padding-right: 20px;
-  width: 60%;
+  margin-right: auto;
+  width: 50%;
 }
 
-.hero-div > div {
-}
 
 .hero-last-text {
   color: #010101;
@@ -251,6 +255,7 @@ a {
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+  width: 120px;
 }
 
 .hero-last-div-two {
@@ -337,8 +342,6 @@ a {
 
 .daily-offer {
   padding: 80px 0px;
-  max-width: 1240px;
-  margin: 0px auto;
 }
 
 .daily-offer-title {
@@ -377,6 +380,7 @@ a {
     ),
     url("../public/image 24.png");
   background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 10px;
   position: relative;
 }
@@ -512,10 +516,7 @@ a {
   padding: 84px 0px;
 }
 
-.contact-info {
-  max-width: 1240px;
-  margin: 0px auto;
-}
+
 
 .reservation-title {
   color: #fff;
@@ -525,8 +526,7 @@ a {
   font-weight: 700;
   line-height: 60px; /* 120% */
   padding-bottom: 80px;
-  max-width: 1240px;
-  margin: 0 auto;
+
 }
 
 .reservation-input-container {
@@ -597,9 +597,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .contact-container {
   padding: 124px 0px 80px 0px;
-  max-width: 1240px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .contact-info {
@@ -679,9 +676,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 /* newsletter css */
 
 .newsletter {
-  max-width: 1240px;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   gap: 57px;
   margin-bottom: 0px;
@@ -773,16 +767,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   max-width: 1240px;
   margin: 0 auto;
   padding: 0px 12px;
-  border-bottom: 1px solid var(--Gray-200, #eaecf0);
+  
 }
 
 .footer-logo {
-  color: #fff;
-  font-family: Jomhuria;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px; /* 62.5% */
+  color: #FFF;
+font-family: Jomhuria;
+font-size: 64px;
+font-style: normal;
+font-weight: 400;
+line-height: 40px; /* 62.5% */
   margin-bottom: 32px;
 }
 
@@ -844,11 +838,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .disclaimer-footer {
-  margin: 32px auto 0px auto;
+  margin: 0px auto 0px auto;
+  padding: 32px;
   max-width: 1240px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-top: 1px solid var(--Gray-200, #eaecf0);
 }
 .disclaimer {
   color: var(--grey-10, #e7e7e7);
@@ -873,19 +869,27 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: inline-block;
 }
 
-@media only screen and (max-width: 376px) {
+.newsletter-title-responsive {
+  display: none;
+}
+
+@media only screen and (max-width: 425px) {
   body {
     margin: 0px;
     padding: 0px;
-    max-width: 376px;
+  }
+  .vector-cotainer {
+    max-width: 344px;
+    margin: 0px auto;
   }
   .nav-center {
     display: none;
   }
   .container {
-    max-width: 344px;
-    margin: 8px auto;
-    padding: 0px;
+    padding: 8px 0px;
+  }
+  .nav-first {
+    padding: 0px 16px;
   }
   .logo {
     color: #000;
@@ -1075,7 +1079,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     gap: 40px;
   }
   .best-food {
-    max-width: 344px;
     margin: 40px auto;
     padding: 0px 0px;
   }
@@ -1129,13 +1132,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .daily-offer-div {
     flex-direction: column;
-    max-width: 344px;
-    margin: 0px auto;
     margin-top: 20px;
   }
   .daily-offer {
-    max-width: 344px;
-    margin: 0px auto;
     padding: 40px 0px;
   }
 
@@ -1147,10 +1146,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-weight: 700;
     line-height: normal;
   }
-  .daily-offer-image-container {
-    margin: 0px auto;
-    max-width: 344px;
-  }
+  
   .daily-offer-image-div {
     border-radius: 5px;
     margin: 1.5rem 0px;
@@ -1238,6 +1234,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .contact-info {
     flex-direction: column;
     gap: 24px;
+    padding: 0px 0px;
   }
   .cotact-time-number {
     margin-left: 2px;
@@ -1286,6 +1283,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-weight: 700;
     line-height: 27.847px; /* 126.575% */
     margin-bottom: 15px;
+  }
+  .newsletter-title-responsive {
+    display: block;
+    color: #4BB924;
+font-family: Satisfy;
+font-size: 11.139px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+
   }
   .img-border {
     border: none;
@@ -1372,4 +1379,169 @@ text-align: center;
   .get-app {
     padding-right: 55px;
   }
+  .disclaimer-footer{
+    flex-direction: column;
+    gap: 32px;
+    margin-top: 32px;
+
+    padding: 0px;
+    padding-top: 32px;
+  }
+}
+@media only screen and (min-width : 426px  ) and (max-width: 1023px) {
+  body {
+    max-width: 1024px;
+  }
+  .vector-cotainer {
+    max-width: 736px;
+    margin: 0px auto;
+  }
+  .image-container {
+    width: 100%;
+  }
+  .hero-div-img {
+    width: 100%;
+    height: 100%;
+  }
+  .nav-right{
+    gap: 12px;
+  }
+  .hero-last-div-two > p > span {
+    display: block;
+}
+  .hero-last-div {
+    width: inherit;
+    margin-right: 0px;
+  }
+  .hero-div {
+    flex-direction: column;
+  }
+  .hero-div >div {
+    width: 100%;
+  }
+  .best-food-section {
+    flex-direction: column;
+  }
+  .best-food-section > div {
+    width: 100%;
+}
+  .contact-img {
+    width: 100%;
+    height: 100%;
+  }
+  .best-food-section {
+    gap: 64px;
+  }
+  .best-food-img {
+    width: 100%;
+  }
+  .img-border >img {
+    width: 100%;
+  }
+  .img-border{
+    width: 100%;
+  }
+  .hero >h1 {
+    font-size: 64px;
+  }
+  .menu-title {
+    font-size: 24px;
+  }
+  .menu-section >div >img {
+    width: 100%;
+  }
+  .daily-offer-image-div >div >h2 {
+    padding: 224px 429px 0px 9px;
+  }
+  .daily-offer-div {
+    display: block;
+    
+  }
+  .daily-offer-image-container{
+    background-size: cover;
+  }
+  .daily-offer-image-container > svg {
+    position: absolute;
+    bottom: 2%;
+    left: 23%;
+}
+.reservation-input-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
+  max-width: 1240px;
+  margin: 0 auto;
+}
+.contact-info {
+  display: flex;
+  padding: 0px 16px;
+  justify-content: space-between;
+  margin-bottom: 64px;
+  flex-direction: column;
+  gap: 16px;
+  /* width: fit-content; */
+}
+.newsletter {
+  flex-direction: column;
+}
+}
+@media only screen and (min-width : 769px  ) and (max-width: 1024px) {
+  body {
+    max-width: 1024px;
+  }
+  .vector-cotainer {
+    max-width: 960px;
+    margin: 0px auto;
+  }
+  .image-container {
+    width: 50%;
+  }
+  .hero-div-img {
+    width: 100%;
+    height: 100%;
+  }
+  .hero-div >div {
+    width: 50%;
+  }
+  .contact-img {
+    width: 100%;
+    height: 100%;
+  }
+  .best-food-section {
+    gap: 64px;
+  }
+  .best-food-section >div {
+    width: 50%;
+  }
+  .best-food-img {
+    width: 100%;
+  }
+  .img-border >img {
+    width: 100%;
+  }
+  .img-border {
+    width: 100%;
+    height: 100%;
+}
+  .hero >h1 {
+    font-size: 64px;
+  }
+  .menu-title {
+    font-size: 24px;
+  }
+  .menu-section >div >img {
+    width: 100%;
+  }
+  .daily-offer-image-div >div >h2 {
+    padding: 224px 153px 0px 9px;
+  }
+  .contact-info {
+    display: flex;
+    padding: 0px 0px;
+    justify-content: space-between;
+    margin-bottom: 64px;
+}
+.daily-offer-image-container {
+  background-size: cover;
+}
 }
