--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,10 +4,44 @@
   --font-size-default: 16px;
   --font-family-default: 'Cabin', sans-serif;
 }
+li {
+  list-style: none;
+}
 .body {
+  max-width: 1440px;
   font-weight: var(--font-weight-regular);
   font-size: var(--font-size-default);
   font-family: var(--font-family-default);
+}
+.flex {
+  display: flex;
+}
+.flex-column{
+  flex-direction: column;
+}
+.items-center {
+  align-items: center;
+}
+.justify-center {
+  justify-content: center;
+}
+.text-center {
+  text-align: center;
+}
+.font-bold{
+  font-weight: 700;
+}
+.font-semibold{
+  font-weight: 600;
+}
+.primary-bg{
+  background: #fbc04e;
+}
+.relative{
+  position: relative;
+}
+.absolute {
+  position: absolute;
 }
 .satisfy-regular {
   font-family: "Satisfy", cursive;
@@ -25,12 +59,9 @@ a {
 }
 .cabin-title {
   font-family: "Cabin", sans-serif;
-  font-optical-sizing: auto;
-  font-variation-settings: "wdth" 100;
 }
 .playfair-display {
   font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
 }
 .jomhuria-regular {
   font-family: "Jomhuria", serif;
@@ -39,29 +70,22 @@ a {
   margin: 0px;
   border: none;
 }
-.container {
+.nav-container {
   padding: 16px 0px;
-  display: flex;
   align-items: center;
   background: #fdfbf7;
 }
 .logo {
-  color: #000;
   font-size: 64px;
   line-height: 40px;
 }
 .nav-center {
-  display: flex;
   gap: 40px;
   align-items: center;
   padding-left: 120px;
-}
-.nav-center > p {
-  color: #000;
   font-size: 18px;
 }
 .nav-first {
-  display: flex;
   justify-content: space-between;
   width: 100%;
 }
@@ -69,46 +93,26 @@ a {
 .nav-button {
   border-radius: 9999px;
   background: #000;
-  display: flex;
-  flex-direction: column;
   gap: 4px;
   padding: 15px 14px;
 }
 
 .nav-right {
-  display: flex;
   gap: 24px;
 }
 
 .reserve-button {
   padding: 12px 20px;
   border-radius: 32px;
-  background: #fbc04e;
-  display: flex;
   border: none;
-  align-items: center;
-  justify-items: center;
-  color: #000;
-  text-align: center;
-  font-size: 16px;
 }
 
 .nav-title {
-  background: #fbc04e;
   padding: 9px 0px;
-  text-align: center;
 }
 
-.nav-title > p {
-  color: #000;
-  font-size: 16px;
-}
-
-.nav-title > p > span {
-  color: #000;
-  font-size: 16px;
+.nav-title-span {
   font-weight: 500;
-  line-height: normal;
   text-decoration-line: underline;
 }
 
@@ -121,27 +125,24 @@ a {
 .hero {
   padding: 64px 0px 80px 0px;
 }
-.hero > h1 {
-  color: #010101;
+.hero-title {
   font-size: 80px;
-  font-weight: 700;
   line-height: 92px;
   gap: 20px;
   padding-bottom: 64px;
 }
-
-.hero > h1 > span {
-  display: flex;
-  align-items: center;
-  gap: 40px;
+.block-span {
+  display: block;
 }
-
+.hero-pizza{
+  top: 41%;
+  right: 51%;
+}
 .hero-div {
-  display: flex;
   gap: 56px;
 }
 
-.hero-div > img {
+.hero-div-img {
   border-radius: 10px;
 }
 
@@ -160,13 +161,10 @@ a {
 }
 
 .hero-button {
-  color: #000;
-  text-align: center;
   font-size: 18px;
   line-height: 24px;
   padding: 14px 28px;
   border-radius: 32px;
-  background: #fbc04e;
   border: none;
 }
 
@@ -180,35 +178,24 @@ a {
   padding: 14px 28px;
   background-color: white;
 }
-
 .button-container {
-  display: flex;
   gap: 24px;
 }
-
 .hero-last {
   padding: 80px 0px;
-  display: flex;
 }
-
 .hero-last-div {
-  display: flex;
   gap: 20px;
   border-right: #969696 1px solid;
-  align-items: center;
   margin-right: auto;
   width: 50%;
 }
-
 .hero-last-text {
-  color: #010101;
   font-size: 40px;
   line-height: 129.28%;
 }
-
 .hero-last-review {
   color: #404040;
-  font-size: 16px;
   line-height: 24px;
   width: 120px;
 }
@@ -472,6 +459,7 @@ a {
   border-radius: 4px;
   border: 1px solid #616161;
   background: rgba(123, 123, 123, 0.5);
+
   position: relative;
 }
 
@@ -860,8 +848,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     color: #000;
     font-size: 11.029px;
     padding-bottom: 22.6px;
+    line-height: normal;
   }
-  .hero-div > div {
+  .hero-inner-div{
     padding-right: 0px;
   }
   .button-container {
@@ -1238,7 +1227,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .hero-div {
     flex-direction: column;
   }
-  .hero-div > div {
+  .hero-inner-div{
     width: 100%;
   }
   .best-food-section {
@@ -1321,7 +1310,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 100%;
     height: 100%;
   }
-  .hero-div > div {
+  .hero-inner-div {
     width: 50%;
   }
   .contact-img {
