--- a/assets/styles/aboutUs.css
+++ b/assets/styles/aboutUs.css
@@ -1,3 +1,13 @@
+.nav-container{
+  background: #000;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+.nav-button{
+  background: #fff;
+}
 .newsletter {
   padding: 80px 0px;
   background: #faf6ec;
@@ -13,21 +23,13 @@
   color: #ff8a01;
   font-family: "Playfair Display";
   font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
 }
 .newsletter-container {
-  display: flex;
-  margin: 0px auto 0px auto;
-  max-width: 1240px;
   gap: 57px;
 }
 .newsletter-title {
-  color: #000;
   font-family: "Playfair Display";
   font-size: 48px;
-  font-style: normal;
   font-weight: 700;
   line-height: 60px;
   margin-bottom: 32px;
@@ -39,10 +41,7 @@
 
 .newsletter-description {
   color: #6c6c6c;
-  font-family: Cabin;
   font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
   line-height: 28px;
   margin-bottom: 40px;
 }
@@ -66,12 +65,8 @@
 
 .newsletter-button {
   border-radius: 32px;
-  color: #000;
   text-align: center;
-  font-family: Cabin;
   font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
   line-height: 20px; /* 111.111% */
   background: #fbc04e;
   border: none;
@@ -98,36 +93,20 @@
 /* hero-sectio */
 
 .hero-section {
-  display: flex;
   gap: 80px;
-  max-width: 1240px;
   margin: 80px auto;
 }
 
 .hero-title {
-  color: #000;
-  font-family: "Playfair Display";
   font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
   line-height: 60px; 
   margin-bottom: 32px;
+  padding-bottom: 0px;
 }
 
 .hero-description {
     color: #6C6C6C;
-font-family: Cabin;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
 line-height: 28px; 
-}
-
-.hero-right {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .hero-img{
@@ -135,7 +114,6 @@ line-height: 28px;
 }
 
 .mission-section {
-    max-width: 1240px;
     margin: 80px auto;
 }
 
@@ -193,7 +171,6 @@ margin-bottom: 64px;
 }
 
 .icon-title {
-    color: #000;
 font-family: "Playfair Display";
 font-size: 28px;
 font-style: normal;
@@ -208,10 +185,225 @@ img {
 
 .icon-description{
     color: #757575;
-font-family: Cabin;
 font-size: 18px;
-font-style: normal;
-font-weight: 400;
 line-height: 28px; 
 }
 
+@media only screen and (max-width: 600px) {
+  .hero-section{
+    flex-direction: column;
+    gap: 32px;
+  }
+  .hero-title {
+    font-size: 24px;
+    line-height: normal;
+    margin-bottom: 16px;
+    padding-bottom: 0px;
+}
+.hero-img {
+  width: 100%;
+}
+.hero-description{
+  line-height: normal;
+  font-size: 14px;
+}
+.mission-div{
+  flex-direction: column;
+  gap: 40px;
+}
+.mission-title{
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+.mission-description{
+  font-size: 14px;
+  line-height: normal;
+}
+.block-span{
+display: inline;
+}
+.icon-title{
+  font-size: 20px;
+}
+.icon-description{
+  font-size: 12px;
+  line-height: normal;
+}
+.yellow-container{
+  margin-top: 0px;
+}
+.newsletter-container {
+  flex-direction: column;
+  gap: 32px;
+}
+.newsletter-img{
+  width: 100%;
+}
+.newsletter-input {
+  padding: 16px 0px 16px 16px;
+}
+.newsletter-title {
+  font-size: 28px;
+  line-height: normal;
+}
+.newsletter-button {
+  font-size: 14px;
+  padding: 8px 16px;
+}
+.img-border > img {
+  border-radius: 10px;
+  transform: translate(0px, 0px);
+}
+}
+@media only screen and (max-width: 600px) {
+  .hero-section{
+    flex-direction: column;
+    gap: 32px;
+  }
+  .hero-title {
+    font-size: 24px;
+    line-height: normal;
+    margin-bottom: 16px;
+    padding-bottom: 0px;
+}
+.hero-img {
+  width: 100%;
+}
+.hero-description{
+  line-height: normal;
+  font-size: 14px;
+}
+.mission-div{
+  flex-direction: column;
+  gap: 40px;
+}
+.mission-title{
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+.mission-description{
+  font-size: 14px;
+  line-height: normal;
+}
+.block-span{
+display: inline;
+}
+.icon-title{
+  font-size: 20px;
+}
+.icon-description{
+  font-size: 12px;
+  line-height: normal;
+}
+.yellow-container{
+  margin-top: 0px;
+}
+.newsletter-container {
+  flex-direction: column;
+  gap: 32px;
+}
+.newsletter-img{
+  width: 100%;
+}
+.newsletter-input {
+  padding: 16px 0px 16px 16px;
+}
+.newsletter-title {
+  font-size: 28px;
+  line-height: normal;
+}
+.newsletter-button {
+  font-size: 14px;
+  padding: 8px 16px;
+}
+.img-border > img {
+  border-radius: 10px;
+  transform: translate(0px, 0px);
+}
+}
+@media only screen and (min-width: 601px) and (max-width: 991px) {
+  .vector-cotainer{
+    max-width: 95%;
+  } 
+  .hero-section{
+    flex-direction: column;
+    gap: 32px;
+  }
+  .hero-title {
+    font-size: 36px;
+    line-height: normal;
+    margin-bottom: 16px;
+    padding-bottom: 0px;
+}
+.hero-img {
+  width: 100%;
+}
+.hero-description{
+  line-height: normal;
+  font-size: 14px;
+}
+.mission-div{
+  flex-direction: column;
+  gap: 40px;
+}
+.mission-title{
+  font-size: 40px;
+  margin-bottom: 16px;
+}
+.mission-description{
+  font-size: 14px;
+  line-height: normal;
+}
+.block-span{
+display: inline;
+}
+.icon-title{
+  font-size: 20px;
+}
+.icon-description{
+  font-size: 12px;
+  line-height: normal;
+}
+.yellow-container{
+  margin-top: 0px;
+}
+.newsletter-container {
+  flex-direction: column;
+  gap: 32px;
+}
+.newsletter-img{
+  width: 100%;
+}
+.newsletter-title {
+  font-size: 30px;
+  line-height: normal;
+}
+.img-border > img {
+  border-radius: 10px;
+  transform: translate(0px, 0px);
+}
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px){
+  .hero-left {
+      width: 50%;
+  }
+  .hero-img{
+    width: 100%;
+  }
+  .hero-right{
+    width: 50%;
+  }
+  .hero-title {
+    font-size: 35px;
+    line-height: normal;
+}
+.mission-div{
+  align-items: center;
+}
+.yellow-container{
+  margin-top: 0px;
+}
+.newsletter-description{
+  margin-bottom: 16px;
+}
+}
