--- a/assets/styles/contactUs.css
+++ b/assets/styles/contactUs.css
@@ -1,346 +1,21 @@
-.satisfy-regular {
-  font-family: "Satisfy", cursive;
-  font-weight: 400;
-  font-style: normal;
+.nav-container {
+  background: #000;
 }
-.lora-font {
-  font-family: "Lora", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.cabin-title {
-  font-family: "Cabin", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings: "wdth" 100;
-}
-.playfair-display {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.jomhuria-regular {
-  font-family: "Jomhuria", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.body {
-  max-width: 1440px;
-}
-
-* {
-  margin: 0px;
-  border: none;
-}
-
-.container {
-  padding: 16px 0px;
-  display: flex;
-  align-items: center;
-  background: #010101;
-}
-
-.logo {
+a {
+  text-decoration: none;
   color: #fff;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px;
 }
-
-.nav-center {
-  display: flex;
-  gap: 40px;
-  align-items: center;
-  padding-left: 120px;
-}
-
-.nav-center > p {
-  color: white;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.nav-first {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1240px;
-  margin: 0px auto;
-}
-
 .nav-button {
-  border-radius: 9999px;
-  background: white;
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  padding: 15px 14px;
-}
-
-.nav-right {
-  display: flex;
-  gap: 24px;
-}
-
-.reserve-button {
-  padding: 12px 20px;
-  border-radius: 32px;
-  background: #fbc04e;
-  display: flex;
-  border: none;
-  align-items: center;
-  justify-items: center;
-  color: #000;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-}
-
-.nav-title {
-  background: #fbc04e;
-  padding: 9px 0px;
-  text-align: center;
-}
-
-.nav-title > p {
-  color: #000;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.nav-title > p > span {
-  color: #000;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  text-decoration-line: underline;
-}
-
-.newsletter {
-  padding: 80px 0px;
-  background: #faf6ec;
-}
-
-.yellow-container {
-  display: flex;
-  gap: 24px;
-  align-items: center;
-  margin-top: 80px;
-  margin-bottom: 6px;
-}
-
-.newsletter-yellow {
-  color: #ff8a01;
-  font-family: "Playfair Display";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-.newsletter-container {
-  display: flex;
-  margin: 0px auto 0px auto;
-  max-width: 1240px;
-  gap: 57px;
-}
-.newsletter-title {
-  color: #000;
-  font-family: "Playfair Display";
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 60px;
-  margin-bottom: 32px;
-}
-
-.newsletter-first-div {
-  margin-top: 100px;
-}
-
-.newsletter-description {
-  color: #6c6c6c;
-  font-family: Cabin;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28px;
-  margin-bottom: 40px;
-}
-
-.newsletter-input {
-  border-radius: 32px;
-  border: 1px solid #6c6c6c;
   background: #fff;
-  padding: 16px 108px 16px 16px;
-  text-align: left;
 }
 
-.newsletter-input::placeholder {
-  color: #c6c6c6;
-  font-family: Cabin;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-.newsletter-button {
-  border-radius: 32px;
-  color: #000;
-  text-align: center;
-  font-family: Cabin;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px; /* 111.111% */
-  background: #fbc04e;
-  border: none;
-  padding: 16px 32px;
-}
-
-.newsletter-input-section {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.img-border {
-  border-radius: 8px;
-  border: 2.5px solid #ff8a01;
-  transform: translate(0, 0px);
-}
-
-.img-border > img {
-  border-radius: 10px;
-  transform: translate(20px, -20px);
-}
-
-/* footer */
-
-.footer {
-  background: #010101;
-  padding: 64px 0px 48px 0px;
-}
-
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1240px;
-  margin: 0 auto;
-  padding: 0px 12px;
-  border-bottom: 1px solid var(--Gray-200, #eaecf0);
-}
-
-.footer-logo {
-  color: #fff;
-  font-family: Jomhuria;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px; /* 62.5% */
-  margin-bottom: 32px;
-}
-
-.footer-description {
-  color: #fff;
-  font-family: Cabin;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28px; /* 155.556% */
-  margin-bottom: 32px;
-}
-
-.footer-bottom {
-  display: flex;
-  justify-content: space-between;
-  gap: 32px;
-  margin-bottom: 64px;
-}
-
-.footer-bottom > p {
-  color: var(--grey-5, #f3f3f3);
-  font-family: Cabin;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px;
-}
-
-.get-app {
-  color: #fbc04e;
-  font-family: Cabin;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; /* 150% */
-  margin-bottom: 16px;
-}
-
-.svg-holder {
-  border-radius: 5px;
-  border: 1px solid #a6a6a6;
-  background: var(--Base-Black, #000);
-  margin-top: 16px;
-  display: flex;
-  gap: 8px;
-  padding: 7.14px 8px;
-}
-
-.logo-text {
-  font-size: 8px;
-  color: #fff;
-}
-
-.svg-flex {
-  display: flex;
-  flex-direction: column;
-  gap: 3px;
-}
-
-.disclaimer-footer {
-  margin: 32px auto 0px auto;
-  max-width: 1240px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.disclaimer {
-  color: var(--grey-10, #e7e7e7);
-  font-family: Cabin;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-}
-
-.disclaimer-icon {
-  display: flex;
-  gap: 24px;
-}
-
+/* contact */
 img {
   border-radius: 10px;
 }
 
 .contact-container {
   padding: 124px 0px 80px 0px;
-  max-width: 1240px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .contact-info {
@@ -513,36 +188,117 @@ img {
 }
 
 .information-input {
-    border-radius: 8px;
-border: 1px solid #E8DCC6;
-background: #F7F7F6;
-padding: 17px 218px 15px 16px; 
-margin-bottom: 24px;
+  border-radius: 8px;
+  border: 1px solid #e8dcc6;
+  background: #f7f7f6;
+  padding: 17px 218px 15px 16px;
+  margin-bottom: 24px;
 }
 
 .information-input::placeholder {
-    color: var(--Text-Default-in-Field, #999);
-    font-family: Cabin;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%;
+  color: var(--Text-Default-in-Field, #999);
+  font-family: Cabin;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
 }
 
 .information-input-padding {
-    padding: 17px 218px 94px 16px; 
+  padding: 17px 218px 94px 16px;
 }
 
 .contact-information-button {
-    border-radius: 32px;
-background: #FBC04E;
-padding: 14px 36px;
-color: #000;
-text-align: center;
-font-family: Cabin;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; /* 133.333% */
-margin-top: 40px;
+  border-radius: 32px;
+  background: #fbc04e;
+  padding: 14px 36px;
+  text-align: center;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 133.333% */
+  margin-top: 40px;
+}
+@media only screen and (max-width: 767px) {
+  .contact-information-div {
+    margin: 0px auto;
+    padding: 0px;
+  }
+  .contact-information-div{
+    flex-direction:column ;
+  }
+  .information-second-paragraph {
+    font-size: 16px;
+    font-style: normal;
+}
+  .map-img{
+    width: 100%;
+  }
+  .contact-title{
+    font-size: 20px;
+  }
+  .cotact-time-number{
+    margin-left: 0px;
+    font-size: 16px;
+  }
+  .contact-time{
+    font-size: 15px;
+  }
+  .contact-info{
+    padding: 0px;
+  }
+}
+@media only screen and (min-width: 768px)  and (max-width: 991px) {
+  .contact-information-div {
+    margin: 0px auto;
+    padding: 0px;
+  }
+  .contact-information-div{
+    flex-direction:column ;
+  }
+  .information-second-paragraph {
+    font-size: 16px;
+    font-style: normal;
+}
+  .map-img{
+    width: 100%;
+  }
+  .contact-title{
+    font-size: 20px;
+  }
+  .cotact-time-number{
+    margin-left: 0px;
+    font-size: 16px;
+  }
+  .contact-time{
+    font-size: 15px;
+  }
+}
+@media only screen and (min-width: 992px)  and (max-width: 1200px) {
+  .contact-information-div {
+    margin: 0px auto;
+    padding: 0px;
+  }
+  .information-second-paragraph {
+    font-size: 16px;
+    font-style: normal;
+}
+.contact-information-title {
+  font-size: 32px;
+}
+
+  .map-img{
+    width: 100%;
+  }
+  .contact-title{
+    font-size: 20px;
+  }
+  .cotact-time-number{
+    margin-left: 0px;
+    font-size: 16px;
+  }
+  .contact-time{
+    font-size: 15px;
+  }
 }
