--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -1,173 +1,44 @@
-.satisfy-regular {
-  font-family: "Satisfy", cursive;
-  font-weight: 400;
-  font-style: normal;
+.nav-container {
+  background: #000;
 }
-.lora-font {
-  font-family: "Lora", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.cabin-title {
-  font-family: "Cabin", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings: "wdth" 100;
-}
-.playfair-display {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.jomhuria-regular {
-  font-family: "Jomhuria", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.body {
-  max-width: 1440px;
-}
-
-* {
-  margin: 0px;
-  border: none;
-}
-
-.container {
-  padding: 16px 0px;
-  display: flex;
-  align-items: center;
-  background: #010101;
-}
-
-.logo {
+a {
+  text-decoration: none;
   color: #fff;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px;
 }
-
-.nav-center {
-  display: flex;
-  gap: 40px;
-  align-items: center;
-  padding-left: 120px;
-}
-
-.nav-center > p {
-  color: white;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.nav-first {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1240px;
-  margin: 0px auto;
-}
-
 .nav-button {
-  border-radius: 9999px;
-  background: white;
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  padding: 15px 14px;
+  background: #fff;
 }
-
-.nav-right {
-  display: flex;
-  gap: 24px;
-}
-
-.reserve-button {
-  padding: 12px 20px;
-  border-radius: 32px;
-  background: #fbc04e;
-  display: flex;
-  border: none;
-  align-items: center;
-  justify-items: center;
-  color: #000;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-}
-
-.nav-title {
-  background: #fbc04e;
-  padding: 9px 0px;
-  text-align: center;
-}
-
-.nav-title > p {
-  color: #000;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.nav-title > p > span {
-  color: #000;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  text-decoration-line: underline;
-}
-
 /* menu */
 
 .menu-section {
   margin: 80px auto;
-  max-width: 1240px;
 }
 
 .menu-title {
-  color: #010101;
   text-align: center;
   font-family: "Playfair Display";
   font-size: 56px;
-  font-style: normal;
   font-weight: 700;
   line-height: 60px;
-  text-align: center;
   margin-bottom: 32px;
 }
 
 .menu-description {
   color: #6c6c6c;
   text-align: center;
-  font-family: Cabin;
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
   line-height: 28px;
   margin-bottom: 64px;
-  text-align: center;
 }
 
 .button-container {
   margin-bottom: 40px;
-  display: flex;
+  display: grid;
+   grid-template-columns: repeat(5,1fr);
+   place-items: center;
   gap: 16px;
-  justify-content: center;
-  align-items: center;
 }
-
 .inactive-button {
   padding: 16px 24px;
   color: #000;
@@ -249,7 +120,6 @@
 
 .menu-price {
   color: #353432;
-  font-family: Cabin;
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
@@ -263,214 +133,119 @@
   margin-top: 40px;
 }
 
-/* newsletter */
-
-.newsletter {
-    padding: 80px 0px;
-  background: #faf6ec;
-
-}
-
-.yellow-container {
-    display: flex;
-    gap: 24px;
-    align-items: center;
-    margin-top: 80px;
-    margin-bottom: 6px;
-}
-
-.newsletter-yellow {
-    color: #FF8A01;
-font-family: "Playfair Display";
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-}
-.newsletter-container {
-  display: flex;
-    margin: 0px auto 0px auto;
-    max-width: 1240px;
-  gap: 57px;
-}
-.newsletter-title {
-  color: #000;
-  font-family: "Playfair Display";
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 60px;
-  margin-bottom: 32px;
-}
-
-.newsletter-first-div {
-  margin-top: 100px;
-}
-
-.newsletter-description {
-  color: #6c6c6c;
-  font-family: Cabin;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28px;
-  margin-bottom: 40px;
-}
-
-
-
-.newsletter-input {
-  border-radius: 32px;
-  border: 1px solid #6c6c6c;
-  background: #fff;
-  padding: 16px 108px 16px 16px;
-  text-align: left;
-}
-
-.newsletter-input::placeholder {
-  color: #c6c6c6;
-  font-family: Cabin;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-.newsletter-button {
-  border-radius: 32px;
-  color: #000;
-  text-align: center;
-  font-family: Cabin;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px; /* 111.111% */
-  background: #fbc04e;
-  border: none;
-  padding: 16px 32px;
-}
-
-.newsletter-input-section {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.img-border {
-  border-radius: 8px;
-  border: 2.5px solid #ff8a01;
-  transform: translate(0, 0px);
-}
-
-.img-border > img {
-  border-radius: 10px;
-  transform: translate(20px, -20px);
-}
-
-
-/* footer */
-
-.footer {
-    background: #010101;
-    padding: 64px 0px 48px 0px;
+@media only screen and (max-width: 600px) {
+  .card-container {
+    grid-template-columns: repeat(1, 1fr);
   }
-  
-  .footer-container {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1240px;
-    margin: 0 auto ;
-    padding:0px 12px ;
-    border-bottom: 1px solid var(--Gray-200, #EAECF0);
+  .button-container {
+   display: grid;
+   grid-template-columns: repeat(2,1fr);
   }
-  
-  .footer-logo {
-    color: #FFF;
-  font-family: Jomhuria;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px; /* 62.5% */
-  margin-bottom: 32px;
+  .responsive-col-span {
+    grid-column: span 2;
   }
-  
-  
-  
-  .footer-description {
-    color: #FFF;
-  font-family: Cabin;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28px; /* 155.556% */
-  margin-bottom: 32px;
+  .img-border > img {
+    width: 100%;
   }
-  
-  .footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    gap: 32px;
-    margin-bottom: 64px;
+  .card-container >div >svg{
+    width: 90vw ;
   }
-  
-  .footer-bottom  >p{
-    color: var(--grey-5, #F3F3F3);
-  font-family: Cabin;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; 
+  .card-container>div>img{
+    width: 90vw ;
   }
-  
-  .get-app {
-    color: #FBC04E;
-  font-family: Cabin;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; /* 150% */
-  margin-bottom: 16px;
+  .card-container>div{
+    width: 90vw ;
   }
-  
-  .svg-holder {
-    border-radius: 5px;
-  border: 1px solid #A6A6A6;
-  background: var(--Base-Black, #000);
-  margin-top: 16px;
-  display: flex;
-  gap: 8px;
-  padding: 7.14px 8px;
+  .menu-title{
+    font-size: 30px;
   }
-  
-  .logo-text {
-    font-size: 8px;
-    color: #fff;
+  .menu-description{
+    font-size: 14px;
+    line-height: normal;
   }
-  
-  .svg-flex {
-    display: flex;
-    flex-direction: column;
-    gap: 3px;
+}
+@media only screen and (min-width: 601px) and (max-width: 767px) {
+  .card-container {
+    grid-template-columns: repeat(1, 1fr);
   }
-  
-  .disclaimer-footer {
-    margin: 32px auto 0px auto;
-    max-width: 1240px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .button-container {
+   display: grid;
+   grid-template-columns: repeat(2,1fr);
   }
-  .disclaimer {
-    color: var(--grey-10, #E7E7E7);
-  font-family: Cabin;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  
+  .responsive-col-span {
+    grid-column: span 2;
   }
-  
-  .disclaimer-icon {
-    display: flex;
-    gap: 24px;
+  .img-border > img {
+    width: 100%;
   }
+  .card-container >div >svg{
+    width: 90vw ;
+  }
+  .card-container>div>img{
+    width: 90vw ;
+  }
+  .card-container>div{
+    width: 90vw ;
+  }
+  .menu-title{
+    font-size: 30px;
+  }
+  .menu-description{
+    font-size: 14px;
+    line-height: normal;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .card-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .img-border > img {
+    width: 100%;
+  }
+  .card-container >div >svg{
+    width: 43.5vw ;
+  }
+  .card-container>div>img{
+    width: 43.5vw ;
+  }
+  .card-container>div{
+    width: 43.5vw ;
+  }
+  .menu-title{
+    font-size: 30px;
+  }
+  .menu-description{
+    font-size: 14px;
+    line-height: normal;
+  }
+  .block-span{
+    display: inline-block;
+  }
+}
+@media only screen and (min-width: 991px) and (max-width: 1200px) {
+  .card-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .img-border > img {
+    width: 100%;
+  }
+  .card-container >div >svg{
+    width: 43.5vw ;
+  }
+  .card-container>div>img{
+    width: 43.5vw ;
+  }
+  .card-container>div{
+    width: 43.5vw ;
+  }
+  .menu-title{
+    font-size: 30px;
+  }
+  .menu-description{
+    font-size: 14px;
+    line-height: normal;
+  }
+  .block-span{
+    display: block;
+  }
+}
