--- a/assets/styles/aboutUs.css
+++ b/assets/styles/aboutUs.css
@@ -188,7 +188,12 @@ img {
 font-size: 18px;
 line-height: 28px; 
 }
-
+.footer {
+  margin-top: 0px;
+}
+.newsletter{
+  margin-bottom:0px ;
+}
 @media only screen and (max-width: 600px) {
   .hero-section{
     flex-direction: column;
